--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
   <header></header>
 
   <main>
-    <div class="color-area">
+    <div class="color-area" data-lock-color="false">
       <button class="btn btn-lock">
         <img src="img/unlock.svg" alt="Lock this color">
       </button>
       <p class="color-code">#08090a</p>
     </div>
 
-    <div class="color-area">
+    <div class="color-area" data-lock-color="false">
       <button class="btn btn-lock">
         <img src="img/unlock.svg" alt="Lock this color">
       </button>
       <p class="color-code">#08090a</p>
     </div>
 
-    <div class="color-area">
+    <div class="color-area" data-lock-color="false">
       <button class="btn btn-lock">
         <img src="img/unlock.svg" alt="Lock this color">
       </button>
       <p class="color-code">#08090a</p>
     </div>
 
-    <div class="color-area">
+    <div class="color-area" data-lock-color="false">
       <button class="btn btn-lock">
         <img src="img/unlock.svg" alt="Lock this color">
       </button>
       <p class="color-code">#08090a</p>
     </div>
 
-    <div class="color-area">
+    <div class="color-area" data-lock-color="false">
       <button class="btn btn-lock">
         <img src="img/unlock.svg" alt="Lock this color">
       </button>
