--- a/extension.html
+++ b/extension.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Pallete | DarkTech</title>
-  <link rel="stylesheet" href="css/extension.css">
-</head>
-<body>
-  <header></header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Random Pallete | DarkTech</title>
+    <link rel="stylesheet" href="css/extension.css" />
+  </head>
+  <body>
+    <header>
+      <a href=".">
+        <img src="img/logo-icon-dt.svg" alt="Logo Random Pallete" />
+        <p>Random Pallete</p>
+      </a>
+    </header>
 
-  <main>
-    <div class="color-area" data-lock-color="false">
-      <button class="btn btn-lock">
-        <img src="img/unlock.svg" alt="Lock this color">
+    <main>
+      <div class="color-area" data-lock-color="false">
+        <button class="btn btn-lock">
+          <img src="img/unlock.svg" alt="Lock this color" />
+        </button>
+        <p class="color-code">#08090a</p>
+      </div>
+
+      <div class="color-area" data-lock- color="false">
+        <button class="btn btn-lock">
+          <img src="img/unlock.svg" alt="Lock this color" />
+        </button>
+        <p class="color-code">#08090a</p>
+      </div>
+
+      <div class="color-area" data-lock-color="false">
+        <button class="btn btn-lock">
+          <img src="img/unlock.svg" alt="Lock this color" />
+        </button>
+        <p class="color-code">#08090a</p>
+      </div>
+
+      <div class="color-area" data-lock-color="false">
+        <button class="btn btn-lock">
+          <img src="img/unlock.svg" alt="Lock this color" />
+        </button>
+        <p class="color-code">#08090a</p>
+      </div>
+
+      <div class="color-area" data-lock-color="false">
+        <button class="btn btn-lock">
+          <img src="img/unlock.svg" alt="Lock this color" />
+        </button>
+        <p class="color-code">#08090a</p>
+      </div>
+
+      <button id="btn-refresh" class="btn btn-refresh">
+        <img src="img/refresh-ccw.svg" alt="Generate new pallete" />
       </button>
-      <p class="color-code">#08090a</p>
-    </div>
+    </main>
 
-    <div class="color-area" data-lock-color="false">
-      <button class="btn btn-lock">
-        <img src="img/unlock.svg" alt="Lock this color">
-      </button>
-      <p class="color-code">#08090a</p>
-    </div>
+    <footer>
+      <img src="img/logo-icon-dt.svg" alt="Logo DarkTech" />
+      <p>Created by <a href="https://darktechlc.github.io">Luís Clício</a></p>
+    </footer>
 
-    <div class="color-area" data-lock-color="false">
-      <button class="btn btn-lock">
-        <img src="img/unlock.svg" alt="Lock this color">
-      </button>
-      <p class="color-code">#08090a</p>
-    </div>
-
-    <div class="color-area" data-lock-color="false">
-      <button class="btn btn-lock">
-        <img src="img/unlock.svg" alt="Lock this color">
-      </button>
-      <p class="color-code">#08090a</p>
-    </div>
-
-    <div class="color-area" data-lock-color="false">
-      <button class="btn btn-lock">
-        <img src="img/unlock.svg" alt="Lock this color">
-      </button>
-      <p class="color-code">#08090a</p>
-    </div>
-
-    <button id="btn-refresh" class="btn btn-refresh">
-      <img src="img/refresh-ccw.svg" alt="Generate new pallete">
-    </button>
-  </main>
-
-  <footer></footer>
-
-  <script src="js/script.js"></script>
-</body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
