Fix copy to clipboard when load pallete saved

--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
     </header>
 
     <main>
-      <div class="color-area" data-lock-color="false">
+      <section class="color-area" data-lock-color="false">
         <button class="btn btn-lock">
           <img src="img/unlock.svg" alt="Lock this color" />
         </button>
-        <p class="color-code">#08090a</p>
-      </div>
+        <p class="color-code"></p>
+      </section>
 
-      <div class="color-area" data-lock- color="false">
+      <section class="color-area" data-lock-color="false">
         <button class="btn btn-lock">
           <img src="img/unlock.svg" alt="Lock this color" />
         </button>
-        <p class="color-code">#08090a</p>
-      </div>
+        <p class="color-code"></p>
+      </section>
 
-      <div class="color-area" data-lock-color="false">
+      <section class="color-area" data-lock-color="false">
         <button class="btn btn-lock">
           <img src="img/unlock.svg" alt="Lock this color" />
         </button>
-        <p class="color-code">#08090a</p>
-      </div>
+        <p class="color-code"></p>
+      </section>
 
-      <div class="color-area" data-lock-color="false">
+      <section class="color-area" data-lock-color="false">
         <button class="btn btn-lock">
           <img src="img/unlock.svg" alt="Lock this color" />
         </button>
-        <p class="color-code">#08090a</p>
-      </div>
+        <p class="color-code"></p>
+      </section>
 
-      <div class="color-area" data-lock-color="false">
+      <section class="color-area" data-lock-color="false">
         <button class="btn btn-lock">
           <img src="img/unlock.svg" alt="Lock this color" />
         </button>
-        <p class="color-code">#08090a</p>
-      </div>
+        <p class="color-code"></p>
+      </section>
 
       <button id="btn-refresh" class="btn btn-refresh">
         <img src="img/refresh-ccw.svg" alt="Generate new pallete" />
