Add alert when a color is copied

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       </button>
     </main>
 
+    <div id="copy-alert" class="copy-alert hidden">Copied!</div>
+
     <footer>
       <img src="img/logo-icon-dt.svg" alt="Logo DarkTech" />
       <p>Created by <a href="https://darktechlc.github.io">Luís Clício</a></p>
