--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Luís Clício" />
+    <meta name="description" content="A random pallete generator" />
+    <meta name="keywords" content="random, pallete, generator, colors" />
+    <meta name="theme-color" content="#08090a" />
+    <meta name="msapplication-navbutton-color" content="#08090a" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#08090a" />
     <title>Random Pallete | DarkTech</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="img/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <header>
       <a href=".">
-        <img src="img/logo-icon-dt.svg" alt="Logo Random Pallete" />
+        <img src="img/logo-icon.svg" alt="Logo Random Pallete" />
         <p>Random Pallete</p>
       </a>
     </header>
