--- a/extension.html
+++ b/extension.html
@@ -65,7 +65,15 @@
 
     <footer>
       <img src="img/logo-icon-dt.svg" alt="Logo DarkTech" />
-      <p>Created by <a href="https://darktechlc.github.io">Luís Clício</a></p>
+      <p>
+        Created by
+        <a
+          href="https://darktechlc.github.io"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Luís Clício</a
+        >
+      </p>
     </footer>
 
     <script src="js/script.js"></script>
